--- a/code/STAT4012_group_project_code.ipynb
+++ b/code/STAT4012_group_project_code.ipynb
@@ -7,9 +7,9 @@
    "metadata": {},
    "source": [
     "# STAT4012 Group Project\n",
-    "> The file is used to test the code for the project.  \n",
-    "> It should be written with clear comments and explanations on each sections of the code.  \n",
-    "> If there are some other modules that need to be imported or run in this file, you can use %load filename.py to load the code from the file. use %run filename.py to run the code from the file.  "
+    "- The file is used to test the code for the project.  \n",
+    "- It should be written with **clear comments** and **explanations** on each sections of the code.  \n",
+    "- If there are some other modules that need to be imported or run in this file, you can use %load filename.py to load the code from the file. use %run filename.py to run the code from the file.  "
    ]
   },
   {
