add 2 LSTM model: with and without attention mechanism

--- a/code/STAT4012_group_project_code.ipynb
+++ b/code/STAT4012_group_project_code.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 123,
    "id": "0e541e4d",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 124,
    "id": "d23a2aa7",
    "metadata": {},
    "outputs": [],
@@ -455,12 +455,270 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "df78931c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from attention import Attention\n",
+    "from tensorflow.keras import Input\n",
+    "from tensorflow.keras.layers import Dense, LSTM\n",
+    "from tensorflow.keras.models import load_model, Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "e3fd18f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_14 (InputLayer)       [(None, 5, 20)]           0         \n",
+      "                                                                 \n",
+      " lstm_3 (LSTM)               (None, 5, 64)             21760     \n",
+      "                                                                 \n",
+      " attention_2 (Attention)     (None, 32)                8192      \n",
+      "                                                                 \n",
+      " dense_8 (Dense)             (None, 1)                 33        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 29,985\n",
+      "Trainable params: 29,985\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "time_steps = 5\n",
+    "input_dim = 20\n",
+    "\n",
+    "# Define/compile the model.\n",
+    "model_input = Input(shape=(time_steps, input_dim))\n",
+    "x = LSTM(64, return_sequences=True)(model_input)\n",
+    "x = Attention(units=32)(x)\n",
+    "x = Dense(1)(x)\n",
+    "Attention_model = Model(model_input, x)\n",
+    "Attention_model.compile(loss='mae', optimizer='adam')\n",
+    "Attention_model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "96a1e9c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "32/32 [==============================] - 3s 9ms/step - loss: 0.0772\n",
+      "Epoch 2/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0602\n",
+      "Epoch 3/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0582\n",
+      "Epoch 4/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0583\n",
+      "Epoch 5/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0575\n",
+      "Epoch 6/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0578\n",
+      "Epoch 7/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0566\n",
+      "Epoch 8/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0572\n",
+      "Epoch 9/10\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.0586\n",
+      "Epoch 10/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0569\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1b88e74ea48>"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# train.\n",
+    "Attention_model.fit(X_train, y_train, epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "8f08776b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11/11 [==============================] - 1s 4ms/step - loss: 7.6684e-09 - accuracy: 0.9357\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[7.668434776064714e-09, 0.9356725215911865]"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Attention_model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer='sgd',\n",
+    "              metrics=['accuracy'])\n",
+    "Attention_model.evaluate(X_test,y_test)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "eecf1461",
    "metadata": {},
    "source": [
     "### 3.3 Simple LSTM （对照组1）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "2126a562",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_4\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_15 (InputLayer)       [(None, 5, 20)]           0         \n",
+      "                                                                 \n",
+      " lstm_4 (LSTM)               (None, 5, 64)             21760     \n",
+      "                                                                 \n",
+      " dense_9 (Dense)             (None, 5, 1)              65        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 21,825\n",
+      "Trainable params: 21,825\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "time_steps = 5\n",
+    "input_dim = 20\n",
+    "\n",
+    "# Define/compile the model.\n",
+    "model_input = Input(shape=(time_steps, input_dim))\n",
+    "x = LSTM(64, return_sequences=True)(model_input)\n",
+    "x = Dense(1)(x)\n",
+    "LSTM_model = Model(model_input, x)\n",
+    "LSTM_model.compile(loss='mae', optimizer='adam')\n",
+    "LSTM_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "a167f0a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "32/32 [==============================] - 3s 5ms/step - loss: 0.0710\n",
+      "Epoch 2/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0584\n",
+      "Epoch 3/10\n",
+      "32/32 [==============================] - 0s 4ms/step - loss: 0.0565\n",
+      "Epoch 4/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0560\n",
+      "Epoch 5/10\n",
+      "32/32 [==============================] - 0s 4ms/step - loss: 0.0561\n",
+      "Epoch 6/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0547\n",
+      "Epoch 7/10\n",
+      "32/32 [==============================] - 0s 5ms/step - loss: 0.0555\n",
+      "Epoch 8/10\n",
+      "32/32 [==============================] - 0s 4ms/step - loss: 0.0579\n",
+      "Epoch 9/10\n",
+      "32/32 [==============================] - 0s 6ms/step - loss: 0.0563\n",
+      "Epoch 10/10\n",
+      "32/32 [==============================] - 0s 4ms/step - loss: 0.0544\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1b892fea108>"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# train.\n",
+    "LSTM_model.fit(X_train, y_train, epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "41f1962a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LSTM_model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer='sgd',\n",
+    "              metrics=['accuracy'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "c9eed234",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(342, 5, 20)\n",
+      "(342,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_test.shape)\n",
+    "print(y_test.shape)\n",
+    "# LSTM_model.evaluate(X_test,y_test)"
    ]
   },
   {
