Backtest using backtrader

--- a/code/STAT4012_group_project_code.ipynb
+++ b/code/STAT4012_group_project_code.ipynb
@@ -900,6 +900,95 @@
     "### 4.1 MSE, scores\n",
     "### 4.2 Back-testing"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a5c1963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import backtrader as bt\n",
+    "import datetime\n",
+    "\n",
+    "class Backtest(bt.Strategy):\n",
+    "    params = ((\"printlog\", True), (\"quantity\", 20000))\n",
+    "\n",
+    "    def log(self, txt, dt=None, doprint=False):\n",
+    "        \"\"\"Logging function for strategy\"\"\"\n",
+    "        if self.params.printlog or doprint:\n",
+    "            dt = dt or self.datas[0].datetime.date(0)\n",
+    "            print(f\"{dt.isoformat()}, {txt}\")\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.dataopen = self.datas[0].open\n",
+    "        self.dataclose = self.datas[0].close\n",
+    "        self.order = 0\n",
+    "        self.open = 1\n",
+    "\n",
+    "    def next(self):\n",
+    "\n",
+    "        if self.order == 1:\n",
+    "            if self.open == 1:\n",
+    "                self.log('Open, %.2f' % self.dataopen[0])\n",
+    "                self.buy(size=self.params.quantity, exectype=bt.Order.Market)\n",
+    "                self.open = 0\n",
+    "            else:\n",
+    "                self.log('Close, %2f' % self.dataclose[0])\n",
+    "                self.close()\n",
+    "                self.open = 1\n",
+    "\n",
+    "        if self.order == -1:\n",
+    "            if self.open == 1:\n",
+    "                self.log('Open, %.2f' % self.dataopen[0])\n",
+    "                self.buy(size=self.params.quantity, exectype=bt.Order.Market)\n",
+    "                self.open = 0\n",
+    "            else:\n",
+    "                self.log('Close, %2f' % self.dataclose[0])\n",
+    "                self.close()\n",
+    "                self.open = 1\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    #Read data\n",
+    "    newdata = data.reset_index()\n",
+    "    array1 = np.repeat(newdata.values, 2, axis=0)\n",
+    "    for i in range(len(newdata.index)):\n",
+    "        array1[2*i+1][0] += datetime.timedelta(hours=14)\n",
+    "    newdata = pd.DataFrame(array1)\n",
+    "    newdata.columns = data.reset_index().columns\n",
+    "    newdata.set_index('date')\n",
+    "    newdata = newdata[['open', 'close', 'sixth_day_return']]\n",
+    "    newdata.head()\n",
+    "\n",
+    "    #Add our strategy\n",
+    "    cerebro = bt.Cerebro()\n",
+    "    cerebro.addstrategy(IntraDayStrategy)\n",
+    "\n",
+    "    #Add data\n",
+    "    data1 = bt.feeds.PandasData(dataname=newdata['2021-11-17':'2023-04-08'])\n",
+    "    cerebro.adddata(data1)\n",
+    "\n",
+    "    #Run the strategy\n",
+    "    cerebro.addanalyzer(bt.analyzers.PyFolio, _name='pyfolio')\n",
+    "    cerebro.addanalyzer(bt.analyzers.AnnualReturn, _name='AnnualReturn')\n",
+    "    cerebro.addanalyzer(bt.analyzers.SharpeRatio, riskfreerate=0.03, annualize=True, _name='SharpeRatio')\n",
+    "    cerebro.addanalyzer(bt.analyzers.DrawDown, _name='DrawDown')\n",
+    "    print(f\"Starting Portfolio Value: {cerebro.broker.getvalue():.2f}\")\n",
+    "    result = cerebro.run()\n",
+    "    print(f\"Final Portfolio Value: {cerebro.broker.getvalue():.2f}\")\n",
+    "    strat = result[0]\n",
+    "\n",
+    "    #Analysis\n",
+    "    print(\"--------------- AnnualReturn -----------------\")\n",
+    "    print(strat.analyzers.AnnualReturn.get_analysis())\n",
+    "    print(\"--------------- SharpeRatio -----------------\")\n",
+    "    print(strat.analyzers.SharpeRatio.get_analysis())\n",
+    "    print(\"--------------- DrawDown -----------------\")\n",
+    "    print(strat.analyzers.DrawDown.get_analysis())\n",
+    "    cerebro.plot()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
