code before presentation

--- a/code/STAT4012_group_project_code.ipynb
+++ b/code/STAT4012_group_project_code.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 2,
    "id": "9671bdaf",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 3,
    "id": "b3ab2bb7",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 4,
    "id": "02a2ca5d",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 5,
    "id": "0e089203",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 6,
    "id": "4bb628de",
    "metadata": {},
    "outputs": [
@@ -275,6 +275,31 @@
    "source": [
     "Perform normalization on the data.\n",
     "Plot the distribution of the data after normalization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "538b6009",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m X_normalized \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39mdrop([\u001b[39m'\u001b[39m\u001b[39msixth_day_return\u001b[39m\u001b[39m'\u001b[39m], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: (x\u001b[39m-\u001b[39mx\u001b[39m.\u001b[39mmin())\u001b[39m/\u001b[39m(x\u001b[39m.\u001b[39mmax()\u001b[39m-\u001b[39mx\u001b[39m.\u001b[39mmin()))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "X_normalized = data.drop(['sixth_day_return'], axis=1).apply(\n",
+    "    lambda x: (x-x.min())/(x.max()-x.min()))\n",
+    "# combine the normalized data and sixth day return\n",
+    "data = pd.concat([X_normalized, data['sixth_day_return']], axis=1)\n"
    ]
   },
   {
