--- a/code/STAT4012_group_project_code.ipynb
+++ b/code/STAT4012_group_project_code.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "data = pd.read_excel('../data/raw_data_adjusted.xlsx',\n",
     "                     index_col=0).dropna(how='any')\n",
-    "data.sort_values(by='date', ascending=True, inplace=True)\n"
+    "data.sort_values(by='date', ascending=True, inplace=True)"
    ]
   },
   {
